@@ -22,7 +22,6 @@ import java.util.UUID;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-
 @ExtendWith(MockitoExtension.class)
 class CategoriaServiceImplTest {
     @Mock
@@ -42,8 +41,8 @@ class CategoriaServiceImplTest {
     @BeforeEach
     void setUp() {
         categoriaTest = new Categoria();
-        categoriaTest.setId(UUID.fromString("12d45756-3895-49b2-90d3-c4a12d5ee081"));
-        categoriaTest.setNombre("DISNEY");
+        categoriaTest.setId(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766"));
+        categoriaTest.setNombre("CategoriaTest");
         categoriaTest.setActivado(true);
     }
 
@@ -56,8 +55,8 @@ class CategoriaServiceImplTest {
         assertAll(
                 () -> assertEquals(1, result.size()),
                 () -> assertTrue(result.contains(categoriaTest)),
-                () -> assertEquals("DISNEY", result.get(0).getNombre()),
-                () -> assertTrue(result.get(0).getActivado())
+                () -> assertEquals("CategoriaTest", result.getFirst().getNombre()),
+                () -> assertTrue(result.getFirst().getActivado())
         );
 
         verify(repository, times(1)).findAll();
@@ -65,46 +64,64 @@ class CategoriaServiceImplTest {
 
     @Test
     void getById() {
-        when(repository.findById(UUID.fromString("12d45756-3895-49b2-90d3-c4a12d5ee081"))).thenReturn(Optional.of(categoriaTest));
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778766")).thenReturn(true);
+        when(repository.findById(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766"))).thenReturn(Optional.of(categoriaTest));
 
-        var result = service.getById(UUID.fromString("12d45756-3895-49b2-90d3-c4a12d5ee081"));
+        var result = service.getById("4182d617-ec89-4fbc-be95-85e461778766");
 
         assertAll(
                 () -> assertNotNull(result),
-                () -> assertEquals("DISNEY", result.getNombre()),
+                () -> assertEquals("CategoriaTest", result.getNombre()),
                 () -> assertTrue(result.getActivado())
         );
 
-        verify(repository, times(1)).findById(UUID.fromString("12d45756-3895-49b2-90d3-c4a12d5ee081"));
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778766");
+        verify(repository, times(1)).findById(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766"));
     }
 
     @Test
     void getByIdNotFound() {
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778700")).thenReturn(true);
         when(repository.findById(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778700"))).thenReturn(Optional.empty());
 
         ResponseStatusException thrown = assertThrows(
-                ResponseStatusException.class, () -> service.getById(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778700"))
+                ResponseStatusException.class, () -> service.getById("4182d617-ec89-4fbc-be95-85e461778700")
         );
 
         assertEquals(HttpStatus.NOT_FOUND, thrown.getStatusCode());
-        assertEquals("La categoria con id 4182d617-ec89-4fbc-be95-85e461778700 no se ha encontrado.", thrown.getReason());
+        assertEquals("No existe la categoria con id 4182d617-ec89-4fbc-be95-85e461778700", thrown.getReason());
 
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778700");
         verify(repository, times(1)).findById(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778700"));
     }
 
     @Test
-    void getByNombre() {
-        when(repository.findByNombre("DISNEY")).thenReturn(Optional.ofNullable(categoriaTest));
+    void getByIdNotValid() {
+        when(validator.isIdValid("4182d617-ec89-4f")).thenReturn(false);
 
-        var result = service.getByNombre("DISNEY");
+        ResponseStatusException thrown = assertThrows(
+                ResponseStatusException.class, () -> service.getById("4182d617-ec89-4f")
+        );
+
+        assertEquals(HttpStatus.BAD_REQUEST, thrown.getStatusCode());
+        assertEquals("La id no es válida. Debe ser un UUID", thrown.getReason());
+
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4f");
+    }
+
+    @Test
+    void getByNombre() {
+        when(repository.findByNombre("CategoriaTest")).thenReturn(Optional.ofNullable(categoriaTest));
+
+        var result = service.getByNombre("CategoriaTest");
 
         assertAll(
                 () -> assertNotNull(result),
-                () -> assertEquals("DISNEY", result.getNombre()),
+                () -> assertEquals("CategoriaTest", result.getNombre()),
                 () -> assertTrue(result.getActivado())
         );
 
-        verify(repository, times(1)).findByNombre("DISNEY");
+        verify(repository, times(1)).findByNombre("CategoriaTest");
     }
 
     @Test
@@ -123,64 +140,116 @@ class CategoriaServiceImplTest {
 
     @Test
     void save() {
-        CategoriaDto nuevaCategoria = new CategoriaDto();
-        nuevaCategoria.setNombre("DISNEY");
+        CategoriaDto nuevaCategoriaDto = new CategoriaDto();
+        nuevaCategoriaDto.setNombre("CategoriaTest");
+        nuevaCategoriaDto.setActivado(true);
+
+        Categoria nuevaCategoria = new Categoria();
+        nuevaCategoria.setNombre("CategoriaTest");
         nuevaCategoria.setActivado(true);
 
-        Categoria categoria = new Categoria();
-        categoria.setNombre(nuevaCategoria.getNombre());
-        categoria.setActivado(nuevaCategoria.getActivado());
+        when(validator.isNameUnique(nuevaCategoriaDto.getNombre())).thenReturn(true);
+        when(mapper.toCategoria(nuevaCategoriaDto)).thenReturn(nuevaCategoria);
+        when(repository.save(nuevaCategoria)).thenReturn(nuevaCategoria);
 
-        when(validator.isNameUnique(nuevaCategoria.getNombre())).thenReturn(true);
-        when(mapper.fromDto(nuevaCategoria)).thenReturn(categoria);
-        when(repository.save(categoria)).thenReturn(categoria);
-
-        var result = service.save(nuevaCategoria);
+        var result = service.save(nuevaCategoriaDto);
 
         assertAll(
                 () -> assertNotNull(result),
-                () -> assertEquals("DISNEY", result.getNombre()),
+                () -> assertEquals("CategoriaTest", result.getNombre()),
                 () -> assertTrue(result.getActivado())
         );
 
-        verify(repository, times(1)).save(categoria);
-        verify(mapper, times(1)).fromDto(nuevaCategoria);
+        verify(validator, times(1)).isNameUnique(nuevaCategoriaDto.getNombre());
+        verify(repository, times(1)).save(nuevaCategoria);
+        verify(mapper, times(2)).toCategoria(nuevaCategoriaDto);
+    }
+
+    @Test
+    void saveInvalidName() {
+        CategoriaDto nuevaCategoriaDto = new CategoriaDto();
+        nuevaCategoriaDto.setNombre("CategoriaTest");
+        nuevaCategoriaDto.setActivado(true);
+
+        Categoria nuevaCategoria = new Categoria();
+        nuevaCategoria.setNombre("CategoriaTest");
+        nuevaCategoria.setActivado(true);
+
+        when(mapper.toCategoria(nuevaCategoriaDto)).thenReturn(nuevaCategoria);
+        when(validator.isNameUnique("CategoriaTest")).thenReturn(false);
+
+        ResponseStatusException thrown = assertThrows(
+                ResponseStatusException.class, () -> service.save(nuevaCategoriaDto)
+        );
+
+        assertEquals(HttpStatus.BAD_REQUEST, thrown.getStatusCode());
+        assertEquals("El nombre de la categoria ya existe", thrown.getReason());
+
+        verify(validator, times(1)).isNameUnique(nuevaCategoriaDto.getNombre());
+        verify(mapper, times(1)).toCategoria(nuevaCategoriaDto);
+
     }
 
     @Test
     void update() {
-        UUID id = UUID.randomUUID();
-        CategoriaDto updatedCategoria = new CategoriaDto();
-        updatedCategoria.setId(id);
-        updatedCategoria.setNombre("SUPERHEROES");
-        updatedCategoria.setActivado(true);
+        UUID id = UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766");
+        CategoriaDto categoriaUpdateDto = new CategoriaDto();
+        categoriaUpdateDto.setNombre("CategoriaTestUpdate");
+        categoriaUpdateDto.setActivado(true);
 
         Categoria categoriaExistente = new Categoria();
         categoriaExistente.setId(id);
-        categoriaExistente.setNombre("OLD_NAME");
+        categoriaExistente.setNombre("CategoriaTest");
         categoriaExistente.setActivado(true);
 
-        Categoria updatedCategoriaEntity = new Categoria();
-        updatedCategoriaEntity.setId(id);
-        updatedCategoriaEntity.setNombre("SUPERHEROES");
-        updatedCategoriaEntity.setActivado(true);
+        Categoria categoriaUpdate = new Categoria();
+        categoriaUpdate.setId(id);
+        categoriaUpdate.setNombre("CategoriaTestUpdate");
+        categoriaUpdate.setActivado(true);
 
+        Categoria categoriaMocked = new Categoria();
+        categoriaMocked.setNombre("CategoriaTestUpdate");
+
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778766")).thenReturn(true);
         when(repository.findById(id)).thenReturn(Optional.of(categoriaExistente));
-        when(mapper.toCategoria(updatedCategoria, categoriaExistente)).thenReturn(updatedCategoriaEntity);
-        when(repository.save(updatedCategoriaEntity)).thenReturn(updatedCategoriaEntity);
+        when(mapper.toCategoria(categoriaUpdateDto)).thenReturn(categoriaMocked);
+        when(validator.isNameUnique("CategoriaTestUpdate")).thenReturn(true);
+        when(mapper.toCategoriaUpdate(categoriaUpdateDto, categoriaExistente)).thenReturn(categoriaUpdate);
+        when(repository.save(categoriaUpdate)).thenReturn(categoriaUpdate);
 
-        var result = service.update(id, updatedCategoria);
+        var result = service.update(id.toString(), categoriaUpdateDto);
 
         assertAll(
                 () -> assertNotNull(result),
                 () -> assertEquals(id, result.getId()),
-                () -> assertEquals("SUPERHEROES", result.getNombre()),
+                () -> assertEquals("CategoriaTestUpdate", result.getNombre()),
                 () -> assertTrue(result.getActivado())
         );
 
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778766");
         verify(repository, times(1)).findById(id);
-        verify(repository, times(1)).save(updatedCategoriaEntity);
-        verify(mapper, times(1)).toCategoria(updatedCategoria, categoriaExistente);
+        verify(repository, times(1)).save(categoriaUpdate);
+        verify(mapper, times(1)).toCategoriaUpdate(categoriaUpdateDto, categoriaExistente);
+        verify(mapper, times(1)).toCategoria(categoriaUpdateDto);
+        verify(validator, times(1)).isNameUnique("CategoriaTestUpdate");
+    }
+
+    @Test
+    void updateNotValidId() {
+        CategoriaDto categoriaUpdateDto = new CategoriaDto();
+        categoriaUpdateDto.setNombre("CategoriaTestUpdate");
+        categoriaUpdateDto.setActivado(true);
+
+        when(validator.isIdValid("4182d617-ec89-4f")).thenReturn(false);
+
+        ResponseStatusException thrown = assertThrows(
+                ResponseStatusException.class, () -> service.update("4182d617-ec89-4f", categoriaUpdateDto)
+        );
+
+        assertEquals(HttpStatus.BAD_REQUEST, thrown.getStatusCode());
+        assertEquals("La id no es válida. Debe ser un UUID", thrown.getReason());
+
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4f");
     }
 
     @Test
@@ -190,52 +259,106 @@ class CategoriaServiceImplTest {
         categoriaUpdateDto.setNombre("CategoriaTestUpdate");
         categoriaUpdateDto.setActivado(true);
 
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778700")).thenReturn(true);
         when(repository.findById(id)).thenReturn(Optional.empty());
 
         ResponseStatusException thrown = assertThrows(
-                ResponseStatusException.class, () -> service.update(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778700"), categoriaUpdateDto)
+                ResponseStatusException.class, () -> service.update("4182d617-ec89-4fbc-be95-85e461778700", categoriaUpdateDto)
         );
 
         assertEquals(HttpStatus.NOT_FOUND, thrown.getStatusCode());
-        assertEquals("La categoria con id 4182d617-ec89-4fbc-be95-85e461778700 no se ha encontrado.", thrown.getReason());
+        assertEquals("No existe la categoria con id 4182d617-ec89-4fbc-be95-85e461778700", thrown.getReason());
 
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778700");
         verify(repository, times(1)).findById(id);
     }
 
     @Test
-    void delete() {
-        UUID id = UUID.fromString("79741172-6da6-47f1-9525-a6c83053f856");
-        CategoriaDto categoriaBorrada = new CategoriaDto();
-        categoriaBorrada.setId(id);
-        categoriaBorrada.setNombre("SERIE");
-        categoriaBorrada.setActivado(true);
+    void updateNotValidName() {
+        UUID id = UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766");
+        CategoriaDto categoriaUpdateDto = new CategoriaDto();
+        categoriaUpdateDto.setNombre("CategoriaTestUpdate");
+        categoriaUpdateDto.setActivado(true);
 
         Categoria categoriaExistente = new Categoria();
         categoriaExistente.setId(id);
-        categoriaExistente.setNombre("SERIE");
+        categoriaExistente.setNombre("CategoriaTest");
         categoriaExistente.setActivado(true);
 
-        Categoria updatedCategoriaEntity = new Categoria();
-        updatedCategoriaEntity.setId(id);
-        updatedCategoriaEntity.setNombre("SERIE");
-        updatedCategoriaEntity.setActivado(true);
+        Categoria categoriaMocked = new Categoria();
+        categoriaMocked.setNombre("CategoriaTestUpdate");
 
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778766")).thenReturn(true);
+        when(repository.findById(id)).thenReturn(Optional.of(categoriaExistente));
+        when(mapper.toCategoria(categoriaUpdateDto)).thenReturn(categoriaMocked);
+        when(validator.isNameUnique("CategoriaTestUpdate")).thenReturn(false);
+
+        ResponseStatusException thrown = assertThrows(
+                ResponseStatusException.class, () -> service.update("4182d617-ec89-4fbc-be95-85e461778766", categoriaUpdateDto)
+        );
+
+        assertEquals(HttpStatus.BAD_REQUEST, thrown.getStatusCode());
+        assertEquals("El nombre de la categoria ya existe", thrown.getReason());
+
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778766");
+        verify(repository, times(1)).findById(id);
+        verify(mapper, times(1)).toCategoria(categoriaUpdateDto);
+        verify(validator, times(1)).isNameUnique("CategoriaTestUpdate");
+    }
+
+    @Test
+    void delete() {
+        UUID id = UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766");
+        CategoriaDto categoriaBorradaDto = new CategoriaDto();
+        categoriaBorradaDto.setNombre("CategoriaTest");
+        categoriaBorradaDto.setActivado(true);
+
+        Categoria categoriaExistente = new Categoria();
+        categoriaExistente.setId(id);
+        categoriaExistente.setNombre("CategoriaTest");
+        categoriaExistente.setActivado(true);
+
+        Categoria categoriaBorrada = new Categoria();
+        categoriaBorrada.setId(id);
+        categoriaBorrada.setNombre("CategoriaTest");
+        categoriaBorrada.setActivado(true);
+
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778766")).thenReturn(true);
         when(repository.findByIdAndActivadoTrue(id)).thenReturn(Optional.of(categoriaExistente));
-        when(mapper.toCategoria(categoriaBorrada, categoriaExistente)).thenReturn(updatedCategoriaEntity);
-        when(repository.save(updatedCategoriaEntity)).thenReturn(updatedCategoriaEntity);
+        when(mapper.toCategoriaUpdate(categoriaBorradaDto, categoriaExistente)).thenReturn(categoriaBorrada);
+        when(repository.save(categoriaBorrada)).thenReturn(categoriaBorrada);
 
-        var result = service.delete(id, categoriaBorrada);
+        var result = service.delete(id.toString(), categoriaBorradaDto);
 
         assertAll(
                 () -> assertNotNull(result),
                 () -> assertEquals(id, result.getId()),
-                () -> assertEquals("SERIE", result.getNombre()),
+                () -> assertEquals("CategoriaTest", result.getNombre()),
                 () -> assertTrue(result.getActivado())
         );
 
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778766");
         verify(repository, times(1)).findByIdAndActivadoTrue(id);
-        verify(repository, times(1)).save(updatedCategoriaEntity);
-        verify(mapper, times(1)).toCategoria(categoriaBorrada, categoriaExistente);
+        verify(repository, times(1)).save(categoriaBorrada);
+        verify(mapper, times(1)).toCategoriaUpdate(categoriaBorradaDto, categoriaExistente);
+    }
+
+    @Test
+    void deleteNotValidId() {
+        CategoriaDto categoriaBorradaDto = new CategoriaDto();
+        categoriaBorradaDto.setNombre("CategoriaTest");
+        categoriaBorradaDto.setActivado(true);
+
+        when(validator.isIdValid("4182d617-ec89-4f")).thenReturn(false);
+
+        ResponseStatusException thrown = assertThrows(
+                ResponseStatusException.class, () -> service.delete("4182d617-ec89-4f", categoriaBorradaDto)
+        );
+
+        assertEquals(HttpStatus.BAD_REQUEST, thrown.getStatusCode());
+        assertEquals("La id no es válida. Debe ser un UUID", thrown.getReason());
+
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4f");
     }
 
     @Test
@@ -255,15 +378,17 @@ class CategoriaServiceImplTest {
         categoriaBorrada.setNombre("CategoriaTest");
         categoriaBorrada.setActivado(true);
 
+        when(validator.isIdValid("4182d617-ec89-4fbc-be95-85e461778766")).thenReturn(true);
         when(repository.findByIdAndActivadoTrue(id)).thenReturn(Optional.empty());
 
         ResponseStatusException thrown = assertThrows(
-                ResponseStatusException.class, () -> service.delete(UUID.fromString("4182d617-ec89-4fbc-be95-85e461778766"), categoriaBorradaDto)
+                ResponseStatusException.class, () -> service.delete("4182d617-ec89-4fbc-be95-85e461778766", categoriaBorradaDto)
         );
 
         assertEquals(HttpStatus.NOT_FOUND, thrown.getStatusCode());
-        assertEquals("La categoria con id 4182d617-ec89-4fbc-be95-85e461778766 no se ha encontrado.", thrown.getReason());
+        assertEquals("No existe la categoria con id 4182d617-ec89-4fbc-be95-85e461778766", thrown.getReason());
 
+        verify(validator, times(1)).isIdValid("4182d617-ec89-4fbc-be95-85e461778766");
         verify(repository, times(1)).findByIdAndActivadoTrue(id);
     }
 }
